--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Godot 4+ specific ignores
 .godot/
+addons/godot-git-plugin
 
 # Godot-specific ignores
 .import/
@@ -15,4 +16,4 @@ data_*/
 mono_crash.*.json
 
 .DS_Store
-isg+prototype.dmg
+builds/
